--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
        	max-width: 100%;
        	max-height: 100%;
        }
+       /*
+       .center {
+       	display: block;
+       	margin: auto;
+       }*/
        </style>   
    </head>    
    <body>        
      <h1>Welcome to Christine's website!</h1>        
      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperidiet.</p>    
      <img class="center fit" id="luka" src="http://static.zerochan.net/Just.Be.Friends.full.1479577.jpg">
+     <a href="allart-is-quite-useless.tumblr.com">Check out my tumblr!</a>
 
      <script src="http://code.jquery.com/jquery-latest.js"></script>
      <script type="text/javascript" language="JavaScript">
