--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperidiet.</p>    
      <img class="center fit" id="luka" src="http://static.zerochan.net/Just.Be.Friends.full.1479577.jpg">
      <a href="allart-is-quite-useless.tumblr.com">Check out my tumblr!</a>
-
+     <h2>Testing headers</h2>
+     <li>Number1</li>
+     <li>Number2</li>
+     <li>Number3</li>
      <script src="http://code.jquery.com/jquery-latest.js"></script>
      <script type="text/javascript" language="JavaScript">
      function set_body_height() { 
