--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
    <head>        
      <title> Christine Sun </title> 
      <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
      <style>
-       /* {
-       	padding: 0;
-       	margin: 0;
-       }*/
        .fit { 
        	/* set relative picture size */
-       	max-width: 100%;
-       	max-height: 100%;
+       	/*max-width: 100%;
+       	max-height: 100%;*/
        }
-       /*
-       .center {
-       	display: block;
-       	margin: auto;
-       }*/
        </style>   
    </head>    
    <body>        
      <h1>Welcome to Christine's website!</h1>        
      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperidiet.</p>    
-     <img class="center fit" id="luka" src="http://static.zerochan.net/Just.Be.Friends.full.1479577.jpg">
+          <ul class="nav nav-tabs">
+              <li role="presentation" class="active"><a href="#">Home</a></li>
+              <li role="presentation"><a href="about.html">About</a></li>
+              <li role="presentation"><a href="contact.html">Contact</a></li>
+          </ul>
+     <br>
+     <img class="center fit" id="luka" src="img/Just.Be.Friends.jpg">
+     <br>
      <a href="allart-is-quite-useless.tumblr.com">Check out my tumblr!</a>
+     <br>
      <h2>Testing headers</h2>
      <li>Number1</li>
      <li>Number2</li>
